[gd_scene load_steps=2 format=3 uid="uid://dvq3mnqmcgelf"]

[ext_resource type="Script" path="res://scenes/day_03/level_02/enemies/motership/clean_up_zone.gd" id="1_5i8p7"]

[node name="CleanUpZone" type="Area2D"]
position = Vector2(0, -2)
collision_layer = 0
monitorable = false
script = ExtResource("1_5i8p7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
debug_color = Color(0.901961, 0.847059, 0, 0.419608)
metadata/_edit_lock_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
